[package]
name = "thiefrl3"
version = "0.1.0"
authors = ["James McNeill <mcneja@gmail.com>"]
edition = "2018"

[dependencies]
# More features: "collisions", "complex_shapes", "immi_ui", "sounds", gamepads
quicksilver = { version = "0.3.6", default-features = false, features = ["fonts", "saving"] }
multiarray = { version = "0.1.3" }
