[package]
name = "thiefrl3"
version = "0.1.0"
authors = ["James McNeill <mcneja@gmail.com>"]
edition = "2018"

[dependencies]
# More features: "collisions", "complex_shapes", "immi_ui", "sounds", gamepads
quicksilver = { version = "0.3.22", default-features = false, features = ["fonts", "saving"] }
multiarray = { version = "0.1.3" }
rand = { version = "0.7.0", features = ["stdweb"] }
rand_pcg = { version = "0.2.0" }
vector2d = { version = "2.2.0" }
